@@ -42,10 +42,20 @@ AC_PROG_LIBTOOL
 AC_PATH_PROG([AWK], [awk])
 AC_PATH_PROG([MD5SUM], [md5sum])
 
-# Build options and user settings.
-AC_POKEREVAL_BUILD_VERSION
-AC_POKEREVAL_BUILD_HOST
-AC_POKEREVAL_BUILD_DEBUG
+#
+# GCC specific debug and optimization flags
+#
+AC_ARG_ENABLE(debug,
+    [  --enable-debug          build in debug mode (the default is to build in optimized mode)],
+    [enable_debug=yes])
+
+if test "$GCC" = "yes" -a "$ac_test_CFLAGS" != set ; then
+  if test "$enable_debug" = "yes" ; then
+    CFLAGS="-pipe -g -Wall -Wpointer-arith -Wstrict-prototypes"
+  else
+    CFLAGS="-pipe -O3 -Wall -Wpointer-arith -Wstrict-prototypes"
+  fi
+fi
 
 AC_EXEEXT
 AC_OBJEXT
