@@ -1,3 +1,9 @@
+Fri Dec 03 13:31:20 2004  Loic Dachary  <loic@gnu.org>
+
+	* config/build.m4 : removed because too complex to maintain
+
+	* configure.ac, bootstrap: lower autoconf requirements to 2.53
+
 Thu Dec 02 3:00:00 2004  Tim Showalter  <tjs@psaux.com>
 
 	* Updated Mac builds; currently, things seem to build with only
